@@ -150,8 +150,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2018 Michal Josef Špaček
- BSD 2-Clause License
+© 2011-2018 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
