@@ -1,5 +1,6 @@
 0.09
  - Add REPOSITORY section to doc.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
 
